--- a/delp/pom.xml
+++ b/delp/pom.xml
@@ -62,7 +62,11 @@
             <artifactId>jsch</artifactId>
             <version>0.1.55</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.0-jre</version>
+        </dependency>
     </dependencies>
 
     <build>
