using @Transactional and synchronized to solve the problem of one person per order, which is a pessimistic locking strategy.

--- a/delp/pom.xml
+++ b/delp/pom.xml
@@ -67,6 +67,10 @@
             <artifactId>guava</artifactId>
             <version>31.0-jre</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
